--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.1",
+    "@tailwindcss/oxide": "^4.0.14",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.3",
     "lucide-react": "^0.482.0",
-    "next": "15.2.2",
+    "next": "^15.2.3",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
