--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/oxide": "^4.0.14",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.3",
+    "lightningcss": "^1.29.3",
     "lucide-react": "^0.482.0",
     "next": "^15.2.0",
     "postcss": "^8.5.3",
