--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.8",
     "@supabase/supabase-js": "^2.49.1",
     "@tailwindcss/oxide": "^4.0.14",
     "autoprefixer": "^10.4.21",
